# DigitalBankAnalytics

./: .gitignore  .replit  README.md  __init__.py  analysis.py  app.py  aspect_analysis.py  models.py  pyproject.toml  requirements.txt  run_app.py  scraper.py  simple_app.py  test_app.py  test_nltk.py  test_nltk_punkt.py
.devcontainer/: devcontainer.json
instance/: app_data.db
static/css/: styles.css
static/js/: charts.js  main.js
templates/: about.html  app_aspect_analysis.html  app_comparison.html  app_data_analysis.html  app_details.html  app_reviews.html  app_tfidf_analysis.html  base.html  index.html  preprocessing.html  simple_index.html  simple_reviews.html
