[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-play-scraper>=1.2.7",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
